>Made cherry spawning less random, instead depending on your actions